vemo-app/main/default/objects/StudentProgram__c/StudentProgram__c.object-meta.xml
<CustomObject>
    <label>Student Program</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Student Program Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>