vemo-app/main/default/objects/StudentProgram__c/fields/AdobeSignAgreementID__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignAgreementID__c</fullName>
    <inlineHelpText>(System Field) This field contains the value of the Adobe Sign agreement ID that is returned from the Adobe API.</inlineHelpText>
    <label>Adobe Sign Agreement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>