vemo-app/main/default/objects/StudentProgram__c/fields/AdobeSignJavascript__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignJavascript__c</fullName>
    <inlineHelpText>(System Field) This field contains the value of a javascript snippet that can be embedded into a web page.</inlineHelpText>
    <label>Adobe Sign Javascript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>