vemo-app/main/default/objects/StudentProgram__c/fields/AdobeSignStatus__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignStatus__c</fullName>
    <inlineHelpText>The status of the AdobeSign process.</inlineHelpText>
    <label>Adobe Sign Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Begin Signing Process</fullName>
            </value>
            <value>
                <fullName>Document Uploaded to Adobe</fullName>
            </value>
            <value>
                <fullName>Document Awaiting Signature</fullName>
            </value>
            <value>
                <fullName>Signing Widget Created</fullName>
            </value>
            <value>
                <fullName>Document Signed</fullName>
            </value>
            <value>
                <fullName>Signed Document Attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>