vemo-app/main/default/objects/StudentProgram__c/fields/AdobeSignURL__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignURL__c</fullName>
    <inlineHelpText>(System Field) This field contains the value of the iFrame URL that can be used for signing the Adobe Agreement.</inlineHelpText>
    <label>Adobe Sign URL</label>
    <type>Url</type>
</CustomField>