vemo-app/main/default/objects/StudentProgram__c/fields/AdobeSignWidgetID__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignWidgetID__c</fullName>
    <inlineHelpText>(System Field) This field contains the value of the widget ID that is used when the Adobe API requests a widget to be created.</inlineHelpText>
    <label>Adobe Sign WidgetID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>