vemo-app/main/default/objects/StudentProgram__c/fields/AgreementSigned__c.field-meta.xml
<CustomField>
    <fullName>AgreementSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checked if student has signed the agreement.</inlineHelpText>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>