vemo-app/main/default/objects/StudentProgram__c/fields/AllocatedAmount__c.field-meta.xml
<CustomField>
    <fullName>AllocatedAmount__c</fullName>
    <label>Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>