vemo-app/main/default/objects/StudentProgram__c/fields/AmountDueToDate__c.field-meta.xml
<CustomField>
    <fullName>AmountDueToDate__c</fullName>
    <inlineHelpText>The total amount billed so far for this Student Program.</inlineHelpText>
    <label>Amount Due To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>