vemo-app/main/default/objects/StudentProgram__c/fields/ApplicationStartAge__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStartAge__c</fullName>
    <formula>TODAY() - DATEVALUE(ApplicationStartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of days since 'Application Start Date'.</inlineHelpText>
    <label>Application Start Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>