vemo-app/main/default/objects/StudentProgram__c/fields/ApplicationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStartDate__c</fullName>
    <inlineHelpText>The date the student started the application/registration.</inlineHelpText>
    <label>Application Start Date</label>
    <type>DateTime</type>
</CustomField>