vemo-app/main/default/objects/StudentProgram__c/fields/ApprovalDisclosureDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDisclosureDate__c</fullName>
    <label>Approval Disclosure Date</label>
    <type>DateTime</type>
</CustomField>