vemo-app/main/default/objects/StudentProgram__c/fields/AssessContract__c.field-meta.xml
<CustomField>
    <fullName>AssessContract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, Assessment will run for this Student Program record regardless of Assessment Date</description>
    <inlineHelpText>If this field is checked, Assessment will run for this Student Program record regardless of Assessment Date</inlineHelpText>
    <label>Assess Contract</label>
    <type>Checkbox</type>
</CustomField>