vemo-app/main/default/objects/StudentProgram__c/fields/AssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDate__c</fullName>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>