vemo-app/main/default/objects/StudentProgram__c/fields/AssessmentDayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>AssessmentDayOfMonth__c</fullName>
    <inlineHelpText>The default day of the month to perform this contract assessment.</inlineHelpText>
    <label>Assessment Day of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>