vemo-app/main/default/objects/StudentProgram__c/fields/AttendanceEndDate__c.field-meta.xml
<CustomField>
    <fullName>AttendanceEndDate__c</fullName>
    <label>Attendance End Date</label>
    <type>Date</type>
</CustomField>