vemo-app/main/default/objects/StudentProgram__c/fields/BirthdateCertification__c.field-meta.xml
<CustomField>
    <fullName>BirthdateCertification__c</fullName>
    <inlineHelpText>(Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Birthdate (Certification)</label>
    <type>Date</type>
</CustomField>