vemo-app/main/default/objects/StudentProgram__c/fields/BirthdatePostCertification__c.field-meta.xml
<CustomField>
    <fullName>BirthdatePostCertification__c</fullName>
    <inlineHelpText>(Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Birthdate (Post-Certification)</label>
    <type>Date</type>
</CustomField>