vemo-app/main/default/objects/StudentProgram__c/fields/BirthdatePreCertification__c.field-meta.xml
<CustomField>
    <fullName>BirthdatePreCertification__c</fullName>
    <inlineHelpText>(Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Birthdate (Pre-Certification)</label>
    <type>Date</type>
</CustomField>