vemo-app/main/default/objects/StudentProgram__c/fields/BirthdateStudent__c.field-meta.xml
<CustomField>
    <fullName>BirthdateStudent__c</fullName>
    <inlineHelpText>(Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Birthdate (Student)</label>
    <type>Date</type>
</CustomField>