vemo-app/main/default/objects/StudentProgram__c/fields/CertificationComments__c.field-meta.xml
<CustomField>
    <fullName>CertificationComments__c</fullName>
    <inlineHelpText>Used by the Certification App. Displays comments added by School Admin during Certification.</inlineHelpText>
    <label>Certification Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>