vemo-app/main/default/objects/StudentProgram__c/fields/CertificationDate__c.field-meta.xml
<CustomField>
    <fullName>CertificationDate__c</fullName>
    <inlineHelpText>The date the Student Program was certified by a School Admin.</inlineHelpText>
    <label>Certification Date</label>
    <type>DateTime</type>
</CustomField>