vemo-app/main/default/objects/StudentProgram__c/fields/CertificationDraftStatus__c.field-meta.xml
<CustomField>
    <fullName>CertificationDraftStatus__c</fullName>
    <inlineHelpText>Used by the Certification App.</inlineHelpText>
    <label>Certification Draft Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Certified</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>