vemo-app/main/default/objects/StudentProgram__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <inlineHelpText>The Date when the Status of Agreement was set to Closed</inlineHelpText>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>