vemo-app/main/default/objects/StudentProgram__c/fields/ClosedReason__c.field-meta.xml
<CustomField>
    <fullName>ClosedReason__c</fullName>
    <inlineHelpText>Specifies the closed reason, if the Status of Agreement is Closed</inlineHelpText>
    <label>Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AgreementClosedReason</valueSetName>
    </valueSet>
</CustomField>