vemo-app/main/default/objects/StudentProgram__c/fields/CongaFinalDisclosureID__c.field-meta.xml
<CustomField>
    <fullName>CongaFinalDisclosureID__c</fullName>
    <inlineHelpText>The ID of the Final Disclosure.</inlineHelpText>
    <label>Conga Final DisclosureID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>