vemo-app/main/default/objects/StudentProgram__c/fields/CongaStatus__c.field-meta.xml
<CustomField>
    <fullName>CongaStatus__c</fullName>
    <inlineHelpText>(Unused) This field should be scheduled for deprecation.</inlineHelpText>
    <label>Conga Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>