vemo-app/main/default/objects/StudentProgram__c/fields/CongaUnsignedAgreementID__c.field-meta.xml
<CustomField>
    <fullName>CongaUnsignedAgreementID__c</fullName>
    <inlineHelpText>The ID of the Unsigned Agreement.</inlineHelpText>
    <label>Conga Unsigned AgreementID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>