vemo-app/main/default/objects/StudentProgram__c/fields/CopyStudentInfo__c.field-meta.xml
<CustomField>
    <fullName>CopyStudentInfo__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>(System Field) When this field is checked key fields from the Student Account record will be copied to the Student Program record, such as email.</inlineHelpText>
    <label>Copy Student Info</label>
    <type>Checkbox</type>
</CustomField>