vemo-app/main/default/objects/StudentProgram__c/fields/CountInPaymentISAs__c.field-meta.xml
<CustomField>
    <fullName>CountInPaymentISAs__c</fullName>
    <formula>IF(
ISPICKVAL(Status__c,"Payment") ||
ISPICKVAL(Status__c,"Internship"),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used in reports to count the In-Payment ISA's .</inlineHelpText>
    <label>Count In-Payment ISAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>