vemo-app/main/default/objects/StudentProgram__c/fields/CountRemainingISAs__c.field-meta.xml
<CustomField>
    <fullName>CountRemainingISAs__c</fullName>
    <formula>IF(
(
ISPICKVAL(Status__c, "Certified") ||
ISPICKVAL(Status__c, "Partially Funded") ||
ISPICKVAL(Status__c, "Fully Funded") ||
ISPICKVAL(Status__c, "Grace") ||
ISPICKVAL(Status__c, "Deferment") ||
ISPICKVAL(Status__c, "Payment") ||
ISPICKVAL(Status__c, "School") ||
ISPICKVAL(Status__c, "Leave of Absence") ||
ISPICKVAL(Status__c, "Internship")
),
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Remaining ISAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>