vemo-app/main/default/objects/StudentProgram__c/fields/CountUniqueISAs__c.field-meta.xml
<CustomField>
    <fullName>CountUniqueISAs__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count Unique ISAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>