vemo-app/main/default/objects/StudentProgram__c/fields/CreditCheck__c.field-meta.xml
<CustomField>
    <fullName>CreditCheck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Credit Check object used to determine credit at the time Student applied for this Student Program.</inlineHelpText>
    <label>Credit Check</label>
    <referenceTo>CreditCheck__c</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>StudentPrograms</relationshipName>
    <type>Lookup</type>
</CustomField>