vemo-app/main/default/objects/StudentProgram__c/fields/CreditCheckDeniedReasonText__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckDeniedReasonText__c</fullName>
    <inlineHelpText>From the Credit Check object. Formatted to be used in communications to student.</inlineHelpText>
    <label>Credit Check Denied Reason Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>