vemo-app/main/default/objects/StudentProgram__c/fields/CreditCheckProcess__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckProcess__c</fullName>
    <inlineHelpText>The status of the Credit Check process (In Progress, Credit Denied, Credit Approved).</inlineHelpText>
    <label>Credit Check Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Credit Denied</fullName>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>