vemo-app/main/default/objects/StudentProgram__c/fields/CurrentStatusDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatusDate__c</fullName>
    <inlineHelpText>The date at which the current Status was set.</inlineHelpText>
    <label>Current Status Date</label>
    <type>DateTime</type>
</CustomField>