vemo-app/main/default/objects/StudentProgram__c/fields/CustomerWithdrawnReason__c.field-meta.xml
<CustomField>
    <fullName>CustomerWithdrawnReason__c</fullName>
    <inlineHelpText>If Cancellation Reason is set to Customer Withdrawn, this will show the reason (No longer attending school, etc).</inlineHelpText>
    <label>Customer Withdrawn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No longer need funds</fullName>
            </value>
            <value>
                <fullName>No longer attending school</fullName>
            </value>
            <value>
                <fullName>Applying for private loan</fullName>
            </value>
            <value>
                <fullName>Applying for PLUS loan</fullName>
            </value>
            <value>
                <fullName>Do not meet eligibility criteria</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>