vemo-app/main/default/objects/StudentProgram__c/fields/CustomerWithdrawnReasonOther__c.field-meta.xml
<CustomField>
    <fullName>CustomerWithdrawnReasonOther__c</fullName>
    <inlineHelpText>If Cancellation Reason is set to Customer Withdrawn, this will show the reason (if above Reason field is set to Other).</inlineHelpText>
    <label>Customer Withdrawn Reason - Other</label>
    <type>TextArea</type>
</CustomField>