vemo-app/main/default/objects/StudentProgram__c/fields/DaysDelinquent__c.field-meta.xml
<CustomField>
    <fullName>DaysDelinquent__c</fullName>
    <formula>if(NextPaymentDue__c > 0,if(TODAY() - NextPaymentDueDate__c >0,Today() - NextPaymentDueDate__c, 0),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>