vemo-app/main/default/objects/StudentProgram__c/fields/Deferment__c.field-meta.xml
<CustomField>
    <fullName>Deferment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this Student Program is currently in Deferment status, this indicates the related Deferment.</inlineHelpText>
    <label>Deferment</label>
    <referenceTo>Deferment__c</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>Student_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>