vemo-app/main/default/objects/StudentProgram__c/fields/DefermentBeginDate__c.field-meta.xml
<CustomField>
    <fullName>DefermentBeginDate__c</fullName>
    <formula>Deferment__r.BeginDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferment Begin Date</label>
    <type>Date</type>
</CustomField>