vemo-app/main/default/objects/StudentProgram__c/fields/DefermentEndDate__c.field-meta.xml
<CustomField>
    <fullName>DefermentEndDate__c</fullName>
    <formula>Deferment__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date the Deferment ends.</inlineHelpText>
    <label>Deferment End Date</label>
    <type>Date</type>
</CustomField>