vemo-app/main/default/objects/StudentProgram__c/fields/DefermentMonthsAllowed__c.field-meta.xml
<CustomField>
    <fullName>DefermentMonthsAllowed__c</fullName>
    <inlineHelpText>The number of months the Payment Term may be extended while student is in Deferment. Not all Deferments qualify for the extention of the Payment Term (see Qualifying Circumstance table in Agreement PDF).</inlineHelpText>
    <label>Deferment Months Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>