vemo-app/main/default/objects/StudentProgram__c/fields/DefermentMonthsRemaining2__c.field-meta.xml
<CustomField>
    <fullName>DefermentMonthsRemaining2__c</fullName>
    <formula>DefermentMonthsAllowed__c - DefermentMonthsUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deferment Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>