vemo-app/main/default/objects/StudentProgram__c/fields/DefermentMonthsRemaining__c.field-meta.xml
<CustomField>
    <fullName>DefermentMonthsRemaining__c</fullName>
    <inlineHelpText>The number of Deferment Months Allowed that remain.</inlineHelpText>
    <label>(Deprecate) Deferment Months Remaining</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>