vemo-app/main/default/objects/StudentProgram__c/fields/DefermentMonthsUsed__c.field-meta.xml
<CustomField>
    <fullName>DefermentMonthsUsed__c</fullName>
    <inlineHelpText>The number of months the Payment Term has already been extended because of one or more Deferments that qualify for the extention of the Payment Term.</inlineHelpText>
    <label>Deferment Months Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>