vemo-app/main/default/objects/StudentProgram__c/fields/DisclosureCalculationProcess__c.field-meta.xml
<CustomField>
    <fullName>DisclosureCalculationProcess__c</fullName>
    <inlineHelpText>(System Field) This field is used to trigger the creation of the Student Program - ISA Payment and Student Program - Loan Alternatives tables.</inlineHelpText>
    <label>Disclosure Calculation Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>