vemo-app/main/default/objects/StudentProgram__c/fields/EligibleToReapply__c.field-meta.xml
<CustomField>
    <fullName>EligibleToReapply__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Eligible To Reapply</label>
    <type>Checkbox</type>
</CustomField>