vemo-app/main/default/objects/StudentProgram__c/fields/EnrollmentStatusCertification__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusCertification__c</fullName>
    <inlineHelpText>Full Time, Half Time, etc. (Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Enrollment Status (Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>