vemo-app/main/default/objects/StudentProgram__c/fields/EnrollmentStatusPostCertification__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusPostCertification__c</fullName>
    <inlineHelpText>Full Time, Half Time, etc. (Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Enrollment Status (Post-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>