vemo-app/main/default/objects/StudentProgram__c/fields/EnrollmentStatusPreCertification__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusPreCertification__c</fullName>
    <inlineHelpText>Full Time, Half Time, etc. (Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Enrollment Status (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>