vemo-app/main/default/objects/StudentProgram__c/fields/EnrollmentStatusStudent__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusStudent__c</fullName>
    <inlineHelpText>Full Time, Half Time, etc. (Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Enrollment Status (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>