vemo-app/main/default/objects/StudentProgram__c/fields/EstimatedAgreementEndDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAgreementEndDate__c</fullName>
    <inlineHelpText>Estimated date when the Payment Term ends.  The Payment Term is the period of time during which student will share their income.</inlineHelpText>
    <label>Estimated Agreement End Date</label>
    <type>Date</type>
</CustomField>