vemo-app/main/default/objects/StudentProgram__c/fields/ExpectedGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedGraduationDate__c</fullName>
    <inlineHelpText>The date student is expected to graduate.</inlineHelpText>
    <label>Expected Graduation Date</label>
    <type>Date</type>
</CustomField>