vemo-app/main/default/objects/StudentProgram__c/fields/FinalDisclosureCleanURL__c.field-meta.xml
<CustomField>
    <fullName>FinalDisclosureCleanURL__c</fullName>
    <formula>IF(!ISBLANK(FinalDisclosureID__c ), $Setup.GlobalSettings__c.AttachmentDownloadPrefix__c &amp; FinalDisclosureID__c , "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click this link to view the PDF of the Final Disclosure.</inlineHelpText>
    <label>Final Disclosure Clean URL</label>
    <type>Text</type>
</CustomField>