vemo-app/main/default/objects/StudentProgram__c/fields/FinalDisclosureID__c.field-meta.xml
<CustomField>
    <fullName>FinalDisclosureID__c</fullName>
    <inlineHelpText>Used by the system to construct the above Final Disclosure Clean URL.</inlineHelpText>
    <label>FinalDisclosureID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>