vemo-app/main/default/objects/StudentProgram__c/fields/FirstPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDueDate__c</fullName>
    <inlineHelpText>The date the first payment is due.</inlineHelpText>
    <label>First Payment Due Date</label>
    <type>Date</type>
</CustomField>