vemo-app/main/default/objects/StudentProgram__c/fields/FundingAmountCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingAmountCertification__c</fullName>
    <inlineHelpText>(Certification) fields are only used for student initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Funding Amount (Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>