vemo-app/main/default/objects/StudentProgram__c/fields/FundingAmountPostCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingAmountPostCertification__c</fullName>
    <inlineHelpText>(Post-Certification) fields store the final values entered by the School Admin during certification.</inlineHelpText>
    <label>Funding Amount (Post-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>