vemo-app/main/default/objects/StudentProgram__c/fields/FundingAmountStudent__c.field-meta.xml
<CustomField>
    <fullName>FundingAmountStudent__c</fullName>
    <inlineHelpText>(Student) fields store the values entered by the Student during application/registration.</inlineHelpText>
    <label>Funding Amount (Student)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>