vemo-app/main/default/objects/StudentProgram__c/fields/FundingMaximumPreCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingMaximumPreCertification__c</fullName>
    <inlineHelpText>Maximum amount Student can accept. (Pre-Certification) fields are only used for school initiated flow, and store temporary values entered by the School Admin during certification.</inlineHelpText>
    <label>Funding Maximum (Pre-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>