vemo-app/main/default/objects/StudentProgram__c/fields/FundingPurpose__c.field-meta.xml
<CustomField>
    <fullName>FundingPurpose__c</fullName>
    <label>Funding Purpose</label>
    <type>TextArea</type>
</CustomField>