vemo-app/main/default/objects/StudentProgram__c/fields/GenerateAgreement__c.field-meta.xml
<CustomField>
    <fullName>GenerateAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually check this box to re-generate the Agreement.</inlineHelpText>
    <label>Generate Agreement</label>
    <type>Checkbox</type>
</CustomField>