vemo-app/main/default/objects/StudentProgram__c/fields/GenerateDisbursementSchedule__c.field-meta.xml
<CustomField>
    <fullName>GenerateDisbursementSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>(System Field) When this field is checked the system will copy the disbursement schedule from the Program definition to the Student Program.</inlineHelpText>
    <label>Generate Disbursement Schedule</label>
    <type>Checkbox</type>
</CustomField>