vemo-app/main/default/objects/StudentProgram__c/fields/GenerateFinalDisclosure__c.field-meta.xml
<CustomField>
    <fullName>GenerateFinalDisclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually check this box to re-generate the Final Disclosure.</inlineHelpText>
    <label>Generate Final Disclosure</label>
    <type>Checkbox</type>
</CustomField>