vemo-app/main/default/objects/StudentProgram__c/fields/GraceMonthsAllowed__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsAllowed__c</fullName>
    <inlineHelpText>The number of months given to student as a Grace Period during which they will not owe any payments.</inlineHelpText>
    <label>Grace Months Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>