vemo-app/main/default/objects/StudentProgram__c/fields/GraceMonthsRemaining2__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsRemaining2__c</fullName>
    <formula>GraceMonthsAllowed__c - GraceMonthsUsed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grace Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>